--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,6 +1,6 @@
 <%- include('header') -%>
 
-<div class="container" style="padding-top:5rem;">
+<div style="text-align:center;padding-top:5rem;">
   <h4>Enter your characters stats and find all the weapons you can use.</h4>
 
 
