--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,8 +1,7 @@
 <%- include('header') -%>
-
+<h1 style="padding: 0.8125rem 0; text-align: center;">Results | <a href="/">Home</a></h1>
 <div class="container">
-  <h1 style="padding: 0.8125rem 0;">Results | <a href="/">Home</a></h1>
-  <div class="row row-cols-1 row-cols-md-4 g-5">
+  <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 row-cols-sm-1 g-5">
     <% equipableWeps.forEach(function(weapon){ %>
     <div class="col">
       <div class="card" style="width: 20rem; color:black;">
