--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,7 +1,10 @@
-<div class="footer sticky">
-  <p style="margin:0;">&copy 2022 Palette Jack</p>
-  <p style="padding:0;">More DS2 vector art <a href="https://vectorified.com/dark-souls-vector-art">here</a></p>
-</div>
+<footer class="footer" style="bottom:0; position:absolute; width:100%;">
+  <div class="container" style="text-align:center; margin:0 auto;">
+    <p style="margin:0;">More DS2 vector art <a href="https://vectorified.com/dark-souls-vector-art">here</a></p>
+    <p style="margin:0;">&copy 2022 Palette Jack</p>
+  </div>
+</footer>
+<script src="/js/behav.js" charset="utf-8"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
