--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
     <link rel="shortcut icon" type="image/png" href="/pics/Estus_Flask.png"/>
     <link rel="stylesheet" href="/css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -9,7 +10,7 @@
   </head>
   <body>
 
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light sticky-top">
       <div class="container-fluid">
         <a class="navbar-brand logo" href="/">
           <img id="logo-img" src="/pics/dark-souls-cropped.png" alt="DS2 Vector Art" width="30" height="24" class="d-inline-block align-text-top">
