--- a/views/main.ejs
+++ b/views/main.ejs
@@ -24,7 +24,7 @@
       </div>
       <br>
       <br>
-      <button class="btn btn-outline-danger" type="button submit" name="submit">Submit</button>
+      <button style="margin-bottom:1rem;" class="btn btn-outline-danger" type="button submit" name="submit">Submit</button>
     </form>
   </div>
   </div>
