--- a/views/result.ejs
+++ b/views/result.ejs
@@ -2,27 +2,41 @@
 
 <div class="container">
   <h1 style="padding: 0.8125rem 0; text-align:center;">Results | <a href="/">Home</a></h1>
-  <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 row-cols-sm-1 g-5">
+  <div class="row g-5">
     <% equipableWeps.forEach(function(weapon){ %>
-    <div class="col">
-      <div class="card" style="width: 20rem; color:black;">
-        <div class="card-body">
-          <p class="text-muted" style="float:left;"><%=weapon.type%></p>
-          <img style="text-align:center;" src="<%=weapon.link%>" class="" alt="<%=weapon.title%>">
-          <h5 class="card-title" style="text-align:center;"><%=weapon.title%></h5>
-          <div style="display:flex; justify-content:space-around;">
-            <div class="form-contain">
-              <p style="margin-bottom:0;" class="card-text">Reqs:</p>
-              <p style="margin-bottom:0.3125rem" class="card-text" style="font-size: 0.8125rem;">str: <%=weapon.statReq.strength%> <br> dex: <%=weapon.statReq.dexterity%> <br> int: <%=weapon.statReq.intelligence%> <br> fth: <%=weapon.statReq.faith%></p>
-            </div>
-            <div class="form-contain">
-              <p style="margin-bottom:0;" class="card-text">Scal:</p>
-              <p style="margin-bottom:0.3125rem" class="card-text" style="font-size: 0.8125rem;">str: <%=weapon.statScal.strength%> <br> dex: <%=weapon.statScal.dexterity%> <br> int: <%=weapon.statScal.intelligence%> <br> fth: <%=weapon.statScal.faith%></p>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <div class="card text-center flip-card" style="width: 20rem; color:black;">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <div class="card text-center" style="width: 20rem; height: 18.75rem; color:black;"">
+              <div class="card-body">
+                <p class="text-muted" style="float:left;"><%=weapon.type%><br></p>
+                <img style="padding:1rem; padding-right: 2rem;" src="<%=weapon.link%>" class="" alt="<%=weapon.title%>">
+                <h5 class="card-title" style="text-align:center;"><%=weapon.title%></h5>
+                <div style="display:flex; justify-content:space-around;">
+                  <div class="form-contain">
+                    <p style="margin-bottom:0;" class="card-text">Reqs:</p>
+                    <p style="margin-bottom:0.3125rem" class="card-text" style="font-size: 0.8125rem;">str: <%=weapon.statReq.strength%> <br> dex: <%=weapon.statReq.dexterity%> <br> int: <%=weapon.statReq.intelligence%> <br> fth:
+                      <%=weapon.statReq.faith%></p>
+                  </div>
+                  <div class="form-contain">
+                    <p style="margin-bottom:0;" class="card-text">Scal:</p>
+                    <p style="margin-bottom:0.3125rem" class="card-text" style="font-size: 0.8125rem;">str: <%=weapon.statScal.strength%> <br> dex: <%=weapon.statScal.dexterity%> <br> int: <%=weapon.statScal.intelligence%> <br> fth:
+                      <%=weapon.statScal.faith%></p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <p class="card-text">
-            <%=weapon.flavorText%>
-          <p>
+          <div class="flip-card-back">
+            <div class="card text-center" style="width: 20rem; height: 18.75rem; color:black;"">
+              <div class="card-body">
+                <p class="card-text">
+                  <%=weapon.flavorText%>
+                <p>
+            </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -30,7 +44,9 @@
   </div>
 </div>
 
+<script src="/js/behav.js" charset="utf-8"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-
 </html>
+
+<!-- row-cols-lg-4 row-cols-md-2 row-cols-sm-1 g-5 -->
